--- a/src/components/shared/header/Navigation.css
+++ b/src/components/shared/header/Navigation.css
@@ -85,22 +85,25 @@
 
 .logo-wrapper{
     position: relative;
-    z-index: -1;
+}
+
+.logo {
+    display: inline;
+    vertical-align: top;
+    width: 90px;
+    height: 100%;
+    margin-right: 20px;
+    fill: white !important;
+    padding-left: 1em;
+    z-index: 1;
 }
 
 
 /*translate button*/
 .translate-wrapper {
-    /*display: inline-block;*/
-    /*float: right;*/
-    /*position: relative;*/
-    /*user-select: none;*/
-    /*line-height: 70px;*/
-    /*margin: auto;*/
     display: inline-block;
-    margin: auto;
+    margin: auto 0;
     height: auto;
-
 }
 
 .translate-button {
@@ -109,13 +112,9 @@
     margin: auto;
 }
 
-
-
-
 @media only screen and (max-width: 1000px) {
     .navigation-container {
         height: 50px;
-
     }
 
     .navigation-wrapper {
@@ -132,6 +131,8 @@
         transition: width 1s 0.5s;
         width: 0;
         right: 0;
+        display: flex;
+        flex-direction: row;
     }
 
     .menu-open.navigation-menu {
@@ -210,32 +211,30 @@
 
 
     .hamburger-wrapper {
-        position: absolute;
+        display: inline-block;
         margin: 0 10px 0 0;
-        grid-column-start: 4;
-        padding-left: 0;
-        display: flex;
-        flex-direction: column;
-        right:0;
+        right:30px;
+        width:50px;
+        /*padding-left: 30px;*/
     }
 
     .hamburger-box {
-        display: block;
+        display: flex;
         cursor: pointer;
-        width: 70px;
+        width: 100%;
         height: 50px;
         position: relative;
         z-index: 300;
     }
 
     .hamburger-line {
-        width: 50%;
+        width: 20px;
         height: 1px;
         background-color: white;
         border-radius: 3px;
         position: absolute;
         transform: translate(-50%, -50%);
-        top: 50%;
+        top: 40%;
         left: 50%;
         transition: var(--hamburger-closed);
     }
@@ -269,11 +268,18 @@
     }
 
     .translate-wrapper {
-        position: absolute;
-        right:80px;
         height:50px;
+        width: 100%;
+    }
+
+    .translate-wrapper > a{
+         float: right;
+         margin:auto 0;
         display: flex;
         align-items: center;
+    }
+
+    .logo-wrapper{
 
     }
 }
@@ -285,7 +291,6 @@
     .navigation-menu {
         width: 100% !important;
         background-color: transparent;
-        position: relative;
     }
 
     .menu-open.navigation-menu {
@@ -346,8 +351,5 @@
     .navigation-links {
         font-size: 28px;
     }
-
-
-
 }
 
